try fix dark mode color

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -14,6 +14,7 @@ body {
   h5,
   h6 {
     scroll-margin-top: 66px;
+    color: var(--global-text-color);
   }
 }
 
@@ -38,6 +39,10 @@ body.sticky-bottom-footer {
   }
 }
 
+.ph-card {
+  color: var(--global-text-color) !important;
+  background-color: var(--global-bg-color) !important;
+}
 // TODO: redefine content layout.
 
 /******************************************************************************
